policies/check-network-mode/check-network-mode.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-network-mode
  labels: 
    app: kyverno
  annotations:
    policies.kyverno.io/title: Validate if ECS Containers only have read-only access to its root filesystem
    policies.kyverno.io/category: CDK Best Practices for ECS
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      When managing containers within AWS ECS, it's crucial to enforce security measures to prevent unauthorized modifications. 
      One significant aspect is restricting write access to the containers' root filesystem.
      This policy checks if ECS Containers have read-only access to its root filesystem.
spec:
  rules:
    - name: validate-network-mode
      match:
        all:
        - (values(Resources)[?Type == 'AWS::ECS::TaskDefinition'] | length(@) > `0`): true
      assert:
        all:
        - message: ECS Containers should have read-only access to its root filesystem
          check:
            ~.(values(Resources)[?Type == 'AWS::ECS::TaskDefinition']):
                Properties:
                    NetworkMode: "awsvpc"
